# django-loans

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
commons/: utils.py
core/: settings.py  urls.py
loans/: admin.py  filtersets.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_amortizationschedule.py  0003_loanexcel.py  0004_loan_loan_number_alter_amortizationschedule_loan.py  0005_alter_loan_loan_number.py
