[tool.poetry]
name = "vector-ml-test"
version = "0.1.0"
description = ""
authors = ["Dan Sto. Domingo <danielesto.domingo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.6"
celery = "^5.3.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 80
include = '\.py$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv*
  | _build
  | build
  | dist
  | lib
  | include
  | bin
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
