[tool.poetry]
name = "vector-ml-test"
version = "0.1.0"
description = ""
authors = ["Dan Sto. Domingo <danielesto.domingo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "4.2.6"
celery = "^5.3.4"
numpy = "^1.26.1"
numpy-financial = "^1.0.0"
returns = "^0.22.0"
djangorestframework = "^3.14.0"
djangorestframework-camel-case = "^1.4.2"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
django-filter = "^23.3"
drf-spectacular = "^0.26.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-quotes = "^3.3.2"

[tool.black]
line-length = 80
include = '\.py$'
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv*
  | _build
  | build
  | dist
  | lib
  | include
  | bin
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
